[package]
name = "swpc-psql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde", "rustc-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rayon = "1.7.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls" , "postgres", "chrono"] }
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.28"

